--- a/main.html
+++ b/main.html
@@ -4,12 +4,57 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	 <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  >
 </head>
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+<body class="p-4">
+
+  <div class="container">
+    <div class="card-deck d-flex gap-4">
+
+      <!-- Card 1 -->
+      <div class="card bg-light">
+        <div class="card-header">
+          Welcome to Sync5
+        </div>
+        <img src="https://via.placeholder.com/300x150" class="card-img-top" alt="Card image">
+        <div class="card-body">
+          <h5 class="card-title">New Features</h5>
+          <p class="card-text">Mobile and Tablet support</p>
+          <p class="card-text">With this new update you will be able to sync your work across a large number of platforms.</p>
+          <a href="#" class="btn btn-primary">Read more</a>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 12 mins ago</small>
+        </div>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="card bg-warning">
+        <div class="card-header">
+          Alert
+        </div>
+        <img src="https://via.placeholder.com/300x150" class="card-img-top" alt="Card image">
+        <div class="card-body">
+          <h5 class="card-title">Node Dead</h5>
+          <p class="card-text">Node 5 (east-us) is offline for the last 12 days.</p>
+          <p class="card-text">The US president is under pressure to respond to a widespread cyber-attack linked to China.</p>
+          <a href="#" class="btn btn-primary">Read more</a>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 12 mins ago</small>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- Bootstrap JS CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 
 </body>
 
