--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
       </div>
 
       <!-- Card 2 -->
-      <div class="card bg-warning">
+      <div class="card bg-danger">
         <div class="card-header">
           Alert
         </div>
